update travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ services:
 before_install:
   - docker build -t thanhntdocker/docker-react -f Dockerfile.dev .
 script:
-  - docker run thanhntdocker/docker-react npm run test -- --coverage
+  - docker run -e CI=true thanhntdocker/docker-react npm run test
