--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,16 @@ before_install:
   - docker build -t thanhntdocker/docker-react -f Dockerfile.dev .
 script:
   - docker run -e CI=true thanhntdocker/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker-react"
+  env: "Docker-env"
+  bucket_name: "bucket name for putting code"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
